Add integration tests for various API endpoints
- Implement KpiApiTest for KPI-related endpoints, covering listing, creation, and score recording.
- Create LeaderAssignmentApiTest to validate leader assignment functionalities.
- Introduce LiveAppSmokeTest for smoke testing against the live application container.
- Add RateLimiterTest to ensure rate limiting works as expected under concurrent requests.
- Develop RouteImportApiTest for testing route import functionalities, including CSV uploads.
- Create ServiceAreaApiTest to validate service area management, including creation and updates.
- Implement SystemAdminApiTest for governance routes, covering audit trails and job management.
- Add UserApiTest for user management, including creation, updates, and role validation.